test/errors/invalidNew.compopts
--detailed-errors # invalidNew-detailed.good
--no-detailed-errors # invalidNew-brief.good
